--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "uhi-abdm-adapter",
   "version": "1.0.0",
-  "description": "",
+  "description": "ABDM adapter for UHI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose",
+    "lint": "eslint --fix",
+    "prepare": "husky install"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tech-university-india/uhi-abdm-adapter.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tech-university-india/uhi-abdm-adapter/issues"
+  },
+  "homepage": "https://github.com/tech-university-india/uhi-abdm-adapter#readme",
   "dependencies": {
     "axios": "^1.3.2",
     "bcrypt": "^5.1.0",
@@ -21,11 +30,21 @@
     "redis": "^4.6.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "eslint": "^8.34.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.4.1"
+    "husky": "^8.0.0",
+    "jest": "^29.4.3"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "lines": 95
+      }
+    }
   }
 }
