--- a/package.json
+++ b/package.json
@@ -41,6 +41,16 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "lint-staged": "^13.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test -- --collectCoverage=true --passWithNoTests"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix ."
   }
 }
