--- a/package.json
+++ b/package.json
@@ -22,20 +22,18 @@
   },
   "homepage": "https://github.com/tech-university-india/uhi-abdm-adapter#readme",
   "dependencies": {
-    "axios": "^1.3.2",
-    "bcrypt": "^5.1.0",
-    "crypto": "^1.0.1",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.1",
     "joi": "^17.7.0",
     "jose": "^4.11.4",
-    "jsonwebtoken": "^9.0.0",
-    "redis": "^4.6.4"
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
