chore: modify env example and redis connection file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 SANDBOXURL=http://example.com
+REDIS_URL=redis://localhost:6379/
+REDIS_DB=redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_NAME=default
+REDIS_USERNAME=redis
+REDIS_PASSWORD=secret
+USE_URL=false
