chore: change redis url config

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SANDBOXURL=http://example.com
 REDIS_URL=redis://localhost:6379/
-REDIS_DB=redis
+REDIS_DB=1
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_NAME=default
